tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/after-value.stderr
TOML parse error at line 1, column 15
  |
1 | first = "Tom" last = "Preston-Werner" # INVALID
  |               ^
expected newline, `#`
